[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
chrono = "0.4.19"
sha2 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
num-bigint = "0.4.3"
sled = "0.34.7"
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"] }
